# Tajmahal

./: .gitignore  3dtransformations.h  CMakeLists.txt  README.md  camera.h  colors.h  drawTriangle.h  interpolate.h  line.h  main.cpp  matrix.h  model.h  modeltransformation.h  newLoadObject.h  projection.h  sort  transformations.h  triangleRasterize.h  vector.h  vertex.h
